--- a/scripts/index.html
+++ b/scripts/index.html
@@ -16,7 +16,7 @@
         }
 
         body {
-            background-color: #fbfcf8;
+            background-color: white;
             font-family: "Lexend", sans-serif;
             color: #04202e;
             line-height: 1.6;
