--- a/scripts/playlists.html
+++ b/scripts/playlists.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nayeon Playlists</title>
     <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Lexend:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
 /* Reset and Base */
@@ -645,7 +644,7 @@ body {
             {
                 id: 1,
                 title: "Kimagure Romantic",
-                icon: "../assets/kimagure.jpg",
+                icon: "assets/kimagure.jpg",
                 embedUrl: "https://open.spotify.com/embed/playlist/1dGlJl53BdpReDVdRSeVp9?si=os_QnwwhQViTee-lqF4VrA",
                 externalUrl: "https://open.spotify.com/playlist/1dGlJl53BdpReDVdRSeVp9?si=os_QnwwhQViTee-lqF4VrA"
             },
