--- a/scripts/playlists.html
+++ b/scripts/playlists.html
@@ -644,7 +644,7 @@ body {
             {
                 id: 1,
                 title: "Kimagure Romantic",
-                icon: "assets/kimagure.jpg",
+                icon: "../assets/kimagure.jpg",
                 embedUrl: "https://open.spotify.com/embed/playlist/1dGlJl53BdpReDVdRSeVp9?si=os_QnwwhQViTee-lqF4VrA",
                 externalUrl: "https://open.spotify.com/playlist/1dGlJl53BdpReDVdRSeVp9?si=os_QnwwhQViTee-lqF4VrA"
             },
