--- a/scripts/index.html
+++ b/scripts/index.html
@@ -30,12 +30,12 @@
 
         /* Updated Navigation Styles */
         .header {
-            background: #fbfcf8;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            transition: all 0.3s ease;
-            border-bottom: 1px solid #e0e0e0;
+             backdrop-filter: blur(10px);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    transition: all 0.3s ease;
+    border-bottom: 1px solid rgba(224, 224, 224, 0.3);
         }
 
         .nav-container {
