--- a/scripts/index.html
+++ b/scripts/index.html
@@ -624,7 +624,10 @@
                             </div>
                         </div>
 
-                        <button class="see-playlists-btn">SEE FULL PLAYLISTS</button>
+                        <a href="https://open.spotify.com/artist/1VwDG9aBflQupaFNjUru9A?si=fbOMBkYuSeKC7nHMlc4owg" target="_blank">
+    <button class="see-playlists-btn">SEE DISCOGRAPHY</button>
+</a>
+
                     </div>
                 </div>
             </div>
