--- a/scripts/playlists.html
+++ b/scripts/playlists.html
@@ -645,14 +645,14 @@ body {
             {
                 id: 1,
                 title: "Kimagure Romantic",
-                icon: "../assets/kimagure.jpg",
+                icon: "../kimagure.jpg",
                 embedUrl: "https://open.spotify.com/embed/playlist/1dGlJl53BdpReDVdRSeVp9?si=os_QnwwhQViTee-lqF4VrA",
                 externalUrl: "https://open.spotify.com/playlist/1dGlJl53BdpReDVdRSeVp9?si=os_QnwwhQViTee-lqF4VrA"
             },
             {
                 id: 2,
                 title: "Kimagure x Era",
-                icon: "../assets/era.jpeg",
+                icon: "../era.jpeg",
                 embedUrl: "https://open.spotify.com/embed/playlist/3mRmB39flp6BVqkNcwV6F1?si=rC8IxHmPRAKTjdBFRb0MPA",
                 externalUrl: "https://open.spotify.com/playlist/3mRmB39flp6BVqkNcwV6F1?si=rC8IxHmPRAKTjdBFRb0MPA"
             },
