--- a/scripts/playlists.html
+++ b/scripts/playlists.html
@@ -645,49 +645,49 @@ body {
             {
                 id: 1,
                 title: "Kimagure Romantic",
-                icon: "../kimagure.jpg",
+                icon: "kimagure.jpg",
                 embedUrl: "https://open.spotify.com/embed/playlist/1dGlJl53BdpReDVdRSeVp9?si=os_QnwwhQViTee-lqF4VrA",
                 externalUrl: "https://open.spotify.com/playlist/1dGlJl53BdpReDVdRSeVp9?si=os_QnwwhQViTee-lqF4VrA"
             },
             {
                 id: 2,
                 title: "Kimagure x Era",
-                icon: "../era.jpeg",
+                icon: "era.jpeg",
                 embedUrl: "https://open.spotify.com/embed/playlist/3mRmB39flp6BVqkNcwV6F1?si=rC8IxHmPRAKTjdBFRb0MPA",
                 externalUrl: "https://open.spotify.com/playlist/3mRmB39flp6BVqkNcwV6F1?si=rC8IxHmPRAKTjdBFRb0MPA"
             },
             {
                 id: 3,
                 title: "POP! FOCUS",
-                icon: "../assets/POP.png",
+                icon: "assets/POP.png",
                 embedUrl: "https://open.spotify.com/embed/playlist/1LHCLo8kz3dDfjuUjbEIBm",
                 externalUrl: "https://open.spotify.com/playlist/1LHCLo8kz3dDfjuUjbEIBm"
             },
             {
                 id: 4,
                 title: "ABCD FOCUS",
-                icon: "../assets/ABCD.png",
+                icon: "assets/ABCD.png",
                 embedUrl: "https://open.spotify.com/embed/playlist/7KQFWmDbyHNZ9LqyjTkQGF",
                 externalUrl: "https://open.spotify.com/playlist/7KQFWmDbyHNZ9LqyjTkQGF"
             },
             {
                 id: 5,
                 title: "POP! x ABCD",
-                icon: "../assets/POP x ABCD.png",
+                icon: "POP x ABCD.png",
                 embedUrl: "https://open.spotify.com/embed/playlist/1IwbSfqMNae0jit8GGB2pk",
                 externalUrl: "https://open.spotify.com/playlist/1IwbSfqMNae0jit8GGB2pk"
             },
             {
                 id: 6,
                 title: "POP! x Strategy",
-                icon: "../assets/POP X Strategy.png",
+                icon: "POP X Strategy.png",
                 embedUrl: "https://open.spotify.com/embed/playlist/6Ah5CXOIC1FO9R9Me9rY84",
                 externalUrl: "https://open.spotify.com/playlist/6Ah5CXOIC1FO9R9Me9rY84"
             },
             {
                 id: 7,
                 title: "ABCD x Strategy",
-                icon: "../assets/ABCD x Strategy.png",
+                icon: "ABCD x Strategy.png",
                 embedUrl: "https://open.spotify.com/embed/playlist/18TcFC84stihsDPTUgTc2S",
                 externalUrl: "https://open.spotify.com/playlist/18TcFC84stihsDPTUgTc2S"
             },
@@ -701,7 +701,7 @@ body {
             {
                 id: 9,
                 title: "POP! x ABCD x TWICE Title Tracks",
-                icon: "../assets/POP x ABCD x TWICE TT.png",
+                icon: "POP x ABCD x TWICE TT.png",
                 embedUrl:"https://open.spotify.com/embed/playlist/28ljAiLSIOSda6uG0LOGmo?si=JJ6Wr1YgSpie_1fuHP2hGQ",
                 externalUrl: "https://open.spotify.com/playlist/28ljAiLSIOSda6uG0LOGmo?si=JJ6Wr1YgSpie_1fuHP2hGQ"
             }
@@ -710,14 +710,14 @@ body {
             {
                 id: 10,
                 title: "POP! Unfiltered",
-                icon: "../assets/POP.png",
+                icon: "POP.png",
                 embedUrl: "https://open.spotify.com/embed/playlist/1dGlJl53BdpReDVdRSeVp9",
                 externalUrl: "https://open.spotify.com/playlist/1dGlJl53BdpReDVdRSeVp9"
             },
             {
                 id: 11,
                 title: "ABCD Unfiltered",
-                icon: "../assets/ABCD.png",
+                icon: "ABCD.png",
                 embedUrl: "https://open.spotify.com/embed/playlist/3mRmB39flp6BVqkNcwV6F1",
                 externalUrl: "https://open.spotify.com/playlist/3mRmB39flp6BVqkNcwV6F1"
             },
