--- a/scripts/index.html
+++ b/scripts/index.html
@@ -145,7 +145,7 @@
                 top: 100%;
                 left: 0;
                 width: 100%;
-                background: #fbfcf8;
+                background: white;
                 flex-direction: column;
                 gap: 0;
                 padding: 1rem 0;
