--- a/scripts/playlists.html
+++ b/scripts/playlists.html
@@ -659,14 +659,14 @@ body {
             {
                 id: 3,
                 title: "POP! FOCUS",
-                icon: "assets/POP.png",
+                icon: "POP.png",
                 embedUrl: "https://open.spotify.com/embed/playlist/1LHCLo8kz3dDfjuUjbEIBm",
                 externalUrl: "https://open.spotify.com/playlist/1LHCLo8kz3dDfjuUjbEIBm"
             },
             {
                 id: 4,
                 title: "ABCD FOCUS",
-                icon: "assets/ABCD.png",
+                icon: "ABCD.png",
                 embedUrl: "https://open.spotify.com/embed/playlist/7KQFWmDbyHNZ9LqyjTkQGF",
                 externalUrl: "https://open.spotify.com/playlist/7KQFWmDbyHNZ9LqyjTkQGF"
             },
@@ -694,7 +694,7 @@ body {
             {
                 id: 8,
                 title: "POP! x Chappell",
-                icon: "../assets/POP x Chappell.png",
+                icon: "POP x Chappell.png",
                 embedUrl: "https://open.spotify.com/embed/playlist/7jtFI6Z8DjFl2hN4jMfHaW?si=jH0Vq1CwR-G42KbRQ4Oocw",
                 externalUrl: "https://open.spotify.com/playlist/7jtFI6Z8DjFl2hN4jMfHaW?si=jH0Vq1CwR-G42KbRQ4Oocw"
             },
