--- a/scripts/playlists.html
+++ b/scripts/playlists.html
@@ -701,7 +701,7 @@ body {
             {
                 id: 9,
                 title: "POP! x ABCD x TWICE Title Tracks",
-                icon: "POP x ABCD x TWICE TT.png",
+                icon: "POP x ABCD x Twice TT.png",
                 embedUrl:"https://open.spotify.com/embed/playlist/28ljAiLSIOSda6uG0LOGmo?si=JJ6Wr1YgSpie_1fuHP2hGQ",
                 externalUrl: "https://open.spotify.com/playlist/28ljAiLSIOSda6uG0LOGmo?si=JJ6Wr1YgSpie_1fuHP2hGQ"
             }
