--- a/scripts/nayeon.html
+++ b/scripts/nayeon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Nayeon Navigation</title>
+    <title>IM NAYEON | 임나연<title>
     <link
         href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Lexend:wght@300;400;500;600;700&display=swap"
         rel="stylesheet"
