--- a/scripts/index.html
+++ b/scripts/index.html
@@ -546,8 +546,8 @@
                 <nav>
                     <ul class="nav-menu" id="navMenu">
                         <li class="nav-item"><a href="#home" class="nav-link active">HOME</a></li>
-                        <li class="nav-item"><a href="playlists.html" class="nav-link">PLAYLISTS</a></li>
-                        <li class="nav-item"><a href="#nayeon" class="nav-link">NAYEON</a></li>
+                        <li class="nav-item"><a href="playlists.html" class="nav-link">MUSIC</a></li>
+                        <li class="nav-item"><a href="nayeon.html" class="nav-link">NAYEON</a></li>
                     </ul>
                 </nav>
                 <div class="hamburger" id="hamburger">
