--- a/scripts/playlists.html
+++ b/scripts/playlists.html
@@ -520,8 +520,8 @@ body {
                 <nav>
                     <ul class="nav-menu" id="navMenu">
                         <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
-                        <li class="nav-item"><a href="playlists.html" class="nav-link active">PLAYLISTS</a></li>
-                        <li class="nav-item"><a href="#nayeon" class="nav-link">NAYEON</a></li>
+                        <li class="nav-item"><a href="playlists.html" class="nav-link active">MUSIC</a></li>
+                        <li class="nav-item"><a href="nayeon.html" class="nav-link">NAYEON</a></li>
                     </ul>
                 </nav>
                 <div class="hamburger" id="hamburger">
