--- a/scripts/nayeon.html
+++ b/scripts/nayeon.html
@@ -226,7 +226,7 @@
             <div class="nav-right">
                 <nav>
                     <ul class="nav-menu" id="navMenu">
-                        <li class="nav-item"><a href="#home" class="nav-link">HOME</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
                         <li class="nav-item"><a href="playlists.html" class="nav-link">MUSIC</a></li>
                         <li class="nav-item"><a href="nayeon.html" class="nav-link active">NAYEON</a></li>
                     </ul>
