--- a/scripts/nayeon.html
+++ b/scripts/nayeon.html
@@ -55,7 +55,7 @@
 
         .logo {
             font-family: "Bagel Fat One", cursive;
-            font-size: 24px;
+            font-size: 1.5rem;
             color: #80caf1;
             text-decoration: none;
         }
@@ -80,7 +80,7 @@
             color: #04202e;
             font-weight: 500;
             padding: 0.5rem 1rem;
-            border-radius: 25px;
+          
             transition: all 0.3s ease;
         }
 
