--- a/scripts/index.html
+++ b/scripts/index.html
@@ -22,20 +22,14 @@
             line-height: 1.6;
         }
 
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        /* Updated Navigation Styles */
+       /* Navigation Styles */
         .header {
-             backdrop-filter: blur(10px);
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    transition: all 0.3s ease;
-    border-bottom: 1px solid rgba(224, 224, 224, 0.3);
+            backdrop-filter: blur(10px);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            transition: all 0.3s ease;
+            border-bottom: 1px solid rgba(224, 224, 224, 0.3);
         }
 
         .nav-container {
@@ -61,7 +55,7 @@
 
         .logo {
             font-family: "Bagel Fat One", cursive;
-            font-size: 24px;
+            font-size: 1.5rem;
             color: #80caf1;
             text-decoration: none;
         }
@@ -86,7 +80,7 @@
             color: #04202e;
             font-weight: 500;
             padding: 0.5rem 1rem;
-            border-radius: 25px;
+          
             transition: all 0.3s ease;
         }
 
