--- a/scripts/index.html
+++ b/scripts/index.html
@@ -22,6 +22,10 @@
             line-height: 1.6;
         }
 
+        container {
+            width: 90%;
+        }
+
        /* Navigation Styles */
         .header {
             backdrop-filter: blur(10px);
