--- a/scripts/index.html
+++ b/scripts/index.html
@@ -23,7 +23,9 @@
         }
 
         .container {
-            width: 90%;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
         }
 
        /* Navigation Styles */
