--- a/scripts/nayeon.html
+++ b/scripts/nayeon.html
@@ -22,6 +22,12 @@
             line-height: 1.6;
         }
 
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
         /* Navigation Styles */
         .header {
             backdrop-filter: blur(10px);
