--- a/scripts/playlists.html
+++ b/scripts/playlists.html
@@ -20,6 +20,12 @@ body {
     min-height: 100vh;
 }
 
+.container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
 /* Header & Navigation */
 .header {
     backdrop-filter: blur(10px);
