--- a/scripts/playlists.html
+++ b/scripts/playlists.html
@@ -5,517 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IM NAYEON | 임나연</title>
     <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Lexend:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-/* Reset and Base */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background: white;
-    font-family: "Lexend", sans-serif;
-    color: #04202e;
-    min-height: 100vh;
-}
-
-.container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-/* Header & Navigation */
-.header {
-    backdrop-filter: blur(10px);
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    transition: all 0.3s ease;
-    border-bottom: 1px solid rgba(224, 224, 224, 0.3);
-}
-
-.nav-container {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 2rem;
-    transition: padding 0.3s ease;
-}
-
-.nav-left { flex: 1; }
-.nav-right {
-    flex: 2;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.logo {
-    font-family: "Bagel Fat One", cursive;
-    font-size: 24px;
-    color: #80caf1;
-    text-decoration: none;
-    transition: transform 0.3s ease;
-}
-.logo:hover { transform: scale(1.05); }
-.grey-text {
-    color: #B8BEC1;
-    font-family: "Bagel Fat One", cursive;
-}
-
-.nav-menu {
-    display: flex;
-    list-style: none;
-    gap: 2rem;
-}
-
-.nav-item { position: relative; }
-
-.nav-link {
-    text-decoration: none;
-    color: #04202e;
-    font-weight: 500;
-    padding: 0.5rem 1rem;
-    transition: all 0.3s ease;
-    position: relative;
-}
-
-.nav-link:hover,
-.nav-link.active {
-    color: #80caf1;
-    text-decoration: underline;
-    font-weight: 600;
-    transform: translateY(-2px);
-}
-
-/* Hamburger */
-.hamburger {
-    display: none;
-    flex-direction: column;
-    cursor: pointer;
-    padding: 0.5rem;
-}
-.hamburger span {
-    width: 25px;
-    height: 3px;
-    background: #04202e;
-    margin: 3px 0;
-    transition: all 0.3s ease;
-}
-.hamburger.active span:nth-child(1) {
-    transform: rotate(45deg) translate(5px, 5px);
-}
-.hamburger.active span:nth-child(2) { opacity: 0; }
-.hamburger.active span:nth-child(3) {
-    transform: rotate(-45deg) translate(7px, -6px);
-}
-
-/* Main Content */
-.main-content {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 2rem;
-}
-
-.page-title {
-    text-align: center;
-    margin-bottom: 2rem;
-}
-.page-title h1 {
-    font-family: "Bagel Fat One", cursive;
-    font-size: 2rem;
-    color: #80caf1;
-    margin-bottom: 0.5rem;
-    text-shadow: 2px 2px 4px rgba(128, 202, 241, 0.2);
-}
-.page-title p {
-    font-size: 0.8rem;
-    color: #6b7280;
-    font-weight: 300;
-    display: flex;
-    justify-content: center;
-    gap: 0.5rem;
-}
-
-/* Platform Selection */
-.platform-selection {
-    margin-bottom: 0.5rem;
-    overflow-x: auto;
-    width: 100%;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-
-}
-
-.platform-menu {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    list-style: none;
-    overflow-x: auto;
-    white-space: nowrap;
-}
-
-.platform-link {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    padding: 0.75rem 1.5rem;
-    text-decoration: none;
-    font-weight: 500;
-    color: #04202e;
-    background: white;
-    border: 2px solid transparent;
-    transition: all 0.3s ease;
-    font-size: 1rem;
-}
-
-.platform-link:hover,
-.platform-link.active {
-    color: #80caf1;
-    transform: translateY(-2px);
-
-}
-
-.platform-icon {
-    width: 1rem;
-    height: 1rem;
-}
-
-/* Search */
-.search-container {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 1.5rem;
-}
-
-.search-box {
-    position: relative;
-    width: 60%;
-}
-
-.search-input {
-    width: 100%;
-    padding: 0.4rem 3rem 0.4rem 1rem;
-    border: 2px solid #e0e7ff;
-    font-size: 1rem;
-    background: rgba(255, 255, 255, 0.9);
-    backdrop-filter: blur(10px);
-}
-
-.search-input:focus {
-    border-color: #80caf1;
-    box-shadow: 0 0 20px rgba(128, 202, 241, 0.3);
-    transform: translateY(-2px);
-}
-.search-icon {
-    position: absolute;
-    right: 1.5rem;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 20px;
-    height: 20px;
-}
-
-/* Filter Section */
-.filter-selection {
-    margin-bottom: 1rem;
-}
-
-.filter-menu {
-    margin-bottom: 0.5rem;
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-    list-style: none;
-    flex-wrap: wrap;
-}
-
-.filter-link {
-    text-decoration: none;
-    color: #04202e;
-    font-weight: 500;
-    border: 2px solid transparent;
-    transition: all 0.3s ease;
-    cursor: pointer;
-}
-.filter-link:hover,
-.filter-link.active {
-    color: #80caf1;
-    background: rgba(255, 255, 255, 0.9);
-    transform: translateY(-2px);
-    box-shadow: 0 4px 12px rgba(128, 202, 241, 0.2);
-}
-
-/* Playlist Grid */
-.playlist-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    gap: 2rem;
-}
-
-.playlist-card {
-    background: rgba(255, 255, 255, 0.9);
-    border: 1px solid rgba(224, 231, 255, 0.5);
-    overflow: hidden;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-.playlist-card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-}
-.playlist-image {
-    width: 100%;
-    background: white;
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-}
-.playlist-icon {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-.playlist-info {
-    padding: 1.5rem;
-}
-.playlist-title {
-    font-weight: 600;
-    font-size: 1.1rem;
-    text-align: center;
-    color: #04202e;
-}
-
-/* Modal */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 2000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-    backdrop-filter: blur(5px);
-}
-.modal-content {
-    background: white;
-    margin: 8% auto;
-    padding: 1rem;
-    width: 50%;
-    max-width: 800px;
-    height: 50%;
-    animation: modalSlideIn 0.3s ease;
-    display: flex;
-    flex-direction: column;
-}
-@keyframes modalSlideIn {
-    from { transform: translateY(-50px); opacity: 0; }
-    to { transform: translateY(0); opacity: 1; }
-}
-.modal-header {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1rem;
-    border-bottom: 1px solid #e0e7ff;
-}
-.modal-title {
-    font-size: 1.5rem;
-    font-weight: 600;
-}
-.modal-actions {
-    display: flex;
-    gap: 1rem;
-}
-.open-playlist-btn {
-    background: #80caf1;
-    color: white;
-    padding: 0.75rem 1.5rem;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    text-decoration: none;
-    font-size: 0.8rem;
-}
-.open-playlist-btn:hover {
-    background: #82d2fd;
-    transform: translateY(-2px);
-    box-shadow: 0 4px 12px rgba(29, 185, 84, 0.3);
-}
-.close-btn {
-    font-size: 2rem;
-    color: #6b7280;
-    cursor: pointer;
-}
-.modal-body {
-    flex: 1;
-    overflow: hidden;
-}
-.playlist-embed {
-    width: 100%;
-    height: 100%;
-    border: none;
-    border-radius: 8px;
-}
-
-/* Filter Checkboxes */
-.filter-checkboxes {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.2rem;
-}
-.checkbox-container {
-    display: flex;
-    align-items: center;
-    gap: 0.75rem;
-    color: #04202e;
-    transition: all 0.3s ease;
-    white-space: nowrap;
-    cursor: pointer;
-}
-.checkbox-container:hover {
-    color: #80caf1;
-    transform: translateY(-2px);
-
-}
-.checkbox-container input { display: none; }
-.checkmark {
-    width: 1rem;
-    height: 1rem;
-    border: 2px solid #80caf1;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.3s ease;
-}
-.checkbox-container input:checked + .checkmark {
-    background: #80caf1;
-}
-.checkbox-container input:checked + .checkmark::after {
-    content: '✓';
-    color: white;
-    font-weight: bold;
-    font-size: 0.6rem;
-}
-
-/* Responsive Breakpoints */
-@media (max-width: 768px) {
-              .nav-container {
-                padding: 0.75rem 1rem;
-            }
-
-            .logo {
-                font-size: 20px;
-            }
-
-            .hamburger {
-                display: flex;
-            }
-
-            .nav-menu {
-                position: absolute;
-                top: 100%;
-                left: 0;
-                width: 100%;
-                background: white;
-                flex-direction: column;
-                gap: 0;
-                padding: 1rem 0;
-                transform: translateY(-100%);
-                opacity: 0;
-                visibility: hidden;
-                transition: all 0.3s ease;
-                border-top: 1px solid #e0e0e0;
-            }
-
-            .nav-menu.active {
-                transform: translateY(0);
-                opacity: 1;
-                visibility: visible;
-            }
-
-            .nav-item {
-                width: 100%;
-                text-align: center;
-            }
-
-            .nav-link {
-                display: block;
-                padding: 1rem;
-                margin: 0 1rem;
-                border-radius: 8px;
-            }
-
-            .nav-link:active {
-                color: #80caf1;
-                transform: translateY(-2px);
-                background-color: rgba(128, 202, 241, 0.1);
-            }
-            
-            .nav-link.active {
-                color: #80caf1;
-                transform: translateY(-2px);
-            }
-
-    .main-content { padding: 1rem; }
-    .page-title h1 { font-size: 2rem; }
-    .platform-link, .filter-link, .checkbox-container {
-        font-size: 0.9rem;
-        padding: 0.5rem 1rem;
-    }
-    .playlist-grid {
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        gap: 1rem;
-    }
-    .modal-content {
-        width: 90%;
-        height: 70%;
-    }
-}
-
-@media (max-width: 480px) {
-    .page-title h1 { font-size: 1.8rem; }
-    .modal-content {
-        width: 95%;
-        height: 85%;
-    }
-    .playlist-grid {
-        grid-template-columns: 1fr;
-    }
-            .nav-container {
-                padding: 0.5rem 1rem;
-            }
-
-            .logo {
-                font-size: 18px;
-            }
-
-            .nav-link {
-                font-size: 0.9rem;
-                padding: 0.8rem;
-            }
-        }
-
-        /* Demo content */
-        .demo-content {
-            padding: 2rem;
-            text-align: center;
-            margin-top: 2rem;
-        }
-
-    </style>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <!-- Navigation -->
     <header class="header">
+
         <div class="nav-container">
             <div class="nav-left">
                 <a href="#" class="logo">
@@ -541,7 +36,7 @@ body {
 
     <!-- Main Content -->
 <!-- Main Content -->
-<main class="main-content">
+<main class="container">
 
     <!-- Page Title and Description -->
     <div class="page-title">
@@ -642,6 +137,8 @@ body {
             </div>
         </div>
     </div>
+
+    
 
     <script>
         // Playlist data
